[FIXED Issue #2] Firefox 24 - taskbar context menu seems to be behind taskbar
Fixed z-index of context menus in FF

--- a/web/_phpos/javascript/contextMenu/jquery.contextMenu.css
+++ b/web/_phpos/javascript/contextMenu/jquery.contextMenu.css
@@ -15,6 +15,7 @@
 .context-menu-list {
     margin:0; 
     padding:4px;
+		z-index:999999999;
     
     min-width: 220px;
     max-width: 350px;
